--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   NAPI_CLI_VERSION: 2.14.7
-  TURBO_VERSION: 1.6.3
+  TURBO_VERSION: 1.9.4
   RUST_TOOLCHAIN: nightly-2023-03-09
   PNPM_VERSION: 7.24.3
   NODE_MAINTENANCE_VERSION: 16
@@ -47,7 +47,7 @@ jobs:
 
       - run: rustup default "${RUST_TOOLCHAIN}"
 
-      - run: npm i -g "pnpm@${PNPM_VERSION}" "turbo@${TURBO_VERSION}" "@napi-rs/cli@${NAPI_CLI_VERSION}"
+      - run: npm i -g yarn "pnpm@${PNPM_VERSION}" "turbo@${TURBO_VERSION}" "@napi-rs/cli@${NAPI_CLI_VERSION}"
 
       - uses: actions/checkout@v3
         with:
@@ -65,7 +65,7 @@ jobs:
 
       - run: pnpm playwright install chromium
 
-      - run: node run-tests.js --timings --write-timings -g 1/1
+      - run: turbo run get-test-timings -- --build ${{ github.sha }} && mv packages/next-swc/test-timings.json ./
 
       - run: git clean -xdf test; git checkout test;
 
