--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -19,28 +19,49 @@ env:
   # TODO: remove after testing
   # NEXT_TEST_CONTINUE_ON_ERROR: 'true'
 
+  TURBO_TEAM: 'vercel'
+  TURBO_REMOTE_ONLY: 'true'
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  NEXT_TELEMETRY_DISABLED: 1
+  # we build a dev binary for use in CI so skip downloading
+  # canary next-swc binaries in the monorepo
+  NEXT_SKIP_NATIVE_POSTINSTALL: 1
+  TEST_TIMINGS_TOKEN: ${{ secrets.TEST_TIMINGS_TOKEN }}
+  NEXT_TEST_JOB: 1
+
 jobs:
   build-and-lint:
-    name: Build and Lint
+    name: build and lint
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
       afterBuild: pnpm lint && apt install moreutils jq -y && ./scripts/check-examples.sh && ./scripts/check-pre-compiled.sh
     secrets: inherit
 
-  testDev:
+  test-next-swc:
+    name: test next-swc
+    needs: ['build-and-lint']
+
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      afterBuild: turbo run rust-check && turbo run test-cargo-unit &&  RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/packages/next-swc/crates/next-dev-tests/tests-manifest.json" __INTERNAL_NEXT_DEV_TEST_TURBO_DEV=TRUE __INTERNAL_CUSTOM_TURBOPACK_BINDINGS="$(pwd)/packages/next-swc/native/next-swc.linux-x64-gnu.node" __INTERNAL_NEXT_DEV_TEST_TURBO_GLOB_MATCH="*" NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --type development --timings -c 1
+    secrets: inherit
+
+  test-dev:
+    name: test dev
+    needs: ['build-and-lint']
     strategy:
       fail-fast: false
       matrix:
         group: [1, 2, 3]
-    needs: ['build-and-lint']
 
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
       afterBuild: NEXT_TEST_MODE=dev node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(development|e2e|unit)/.*\.test\.(js|jsx|ts|tsx)$'
     secrets: inherit
 
-  testProd:
-    needs: ['build-and-lint', 'testDev']
+  test-prod:
+    name: test prod
+    needs: ['build-and-lint']
     strategy:
       fail-fast: false
       matrix:
@@ -51,8 +72,9 @@ jobs:
       afterBuild: NEXT_TEST_MODE=start node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(production|e2e)/.*\.test\.(js|jsx|ts|tsx)$'
     secrets: inherit
 
-  testIntegration:
-    needs: ['build-and-lint', 'testProd']
+  test-integration:
+    name: test integration
+    needs: ['build-and-lint']
     strategy:
       fail-fast: false
       matrix:
@@ -63,9 +85,9 @@ jobs:
       afterBuild: node run-tests.js --timings -g ${{ matrix.group }}/5 -c ${TEST_CONCURRENCY} --test-pattern '^(integration)/.*\.test\.(js|jsx|ts|tsx)$'
     secrets: inherit
 
-  testsPass:
+  tests-pass:
+    needs: ['build-and-lint', 'test-integration', 'test-next-swc']
     runs-on: [self-hosted, linux, x64]
     name: thank you, next
-    needs: ['build-and-lint', 'testIntegration']
     steps:
       - run: echo 'success'
