--- a/packages/next-swc/package.json
+++ b/packages/next-swc/package.json
@@ -12,8 +12,9 @@
     "build-wasm": "wasm-pack build crates/wasm --scope=next",
     "cache-build-native": "echo $(ls native)",
     "get-test-timings": "node ../../run-tests.js --timings --write-timings -g 1/1",
-    "rust-check": "cd ../../; cargo fmt -- --check && cargo clippy --all -- -D warnings -A deprecated && cargo check -p next-dev --no-default-features --features cli,custom_allocator,rustls-tls,__internal_nextjs_integration_test",
-    "test-cargo-unit": "cargo test --workspace --exclude next-dev-tests"
+    "rust-check": "cd ../../; cargo fmt -- --check && cargo clippy --all -- -D warnings -A deprecated && cargo check -p next-dev --no-default-features --features cli,custom_allocator,rustls-tls,__internal_nextjs_integration_test && rm -rf target",
+    "test-cargo-unit": "cargo test --release --workspace --exclude next-dev-tests",
+    "bump": "echo 5"
   },
   "napi": {
     "name": "next-swc",
