--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -73,7 +73,10 @@
     "prepublishOnly": "cd ../../ && turbo run build",
     "types": "tsc --declaration --emitDeclarationOnly --stripInternal --declarationDir dist",
     "typescript": "tsec --noEmit",
-    "ncc-compiled": "ncc cache clean && taskr ncc"
+    "ncc-compiled": "ncc cache clean && taskr ncc",
+    "prettier-check": "cd ../../ && prettier --check .",
+    "lint-eslint": "cd ../../ && eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
+    "check-precompiled": "cd ../../ && ./scripts/check-pre-compiled.sh"
   },
   "taskr": {
     "requires": [
