--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -34,7 +34,7 @@ jobs:
     name: build and lint
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
-      afterBuild: pnpm lint && apt install moreutils jq -y && ./scripts/check-examples.sh && turbo run check-precompiled
+      afterBuild: pnpm lint && turbo run check-examples && turbo run check-precompiled
     secrets: inherit
 
   rust-check:
@@ -44,6 +44,7 @@ jobs:
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
       skipForDocsOnly: 'yes'
+      skipInstallBuild: 'yes'
       afterBuild: turbo run rust-check
     secrets: inherit
 
@@ -53,72 +54,73 @@ jobs:
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
       skipForDocsOnly: 'yes'
+      skipInstallBuild: 'yes'
       afterBuild: turbo run test-cargo-unit
     secrets: inherit
 
-  test-next-swc-integration:
-    name: test next-swc integration
-    needs: ['build-and-lint']
-    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
-    with:
-      skipForDocsOnly: 'yes'
-      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/packages/next-swc/crates/next-dev-tests/tests-manifest.json" __INTERNAL_NEXT_DEV_TEST_TURBO_DEV=TRUE __INTERNAL_CUSTOM_TURBOPACK_BINDINGS="$(pwd)/packages/next-swc/native/next-swc.linux-x64-gnu.node" __INTERNAL_NEXT_DEV_TEST_TURBO_GLOB_MATCH="*" NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --type development --timings -c 1
-    secrets: inherit
+  # test-next-swc-integration:
+  #   name: test next-swc integration
+  #   needs: ['build-and-lint']
+  #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+  #   with:
+  #     skipForDocsOnly: 'yes'
+  #     afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/packages/next-swc/crates/next-dev-tests/tests-manifest.json" __INTERNAL_NEXT_DEV_TEST_TURBO_DEV=TRUE __INTERNAL_CUSTOM_TURBOPACK_BINDINGS="$(pwd)/packages/next-swc/native/next-swc.linux-x64-gnu.node" __INTERNAL_NEXT_DEV_TEST_TURBO_GLOB_MATCH="*" NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --type development --timings -c 1
+  #   secrets: inherit
 
-  test-dev:
-    name: test dev
-    needs: ['build-and-lint']
-    strategy:
-      fail-fast: false
-      matrix:
-        group: [1, 2, 3]
+  # test-dev:
+  #   name: test dev
+  #   needs: ['build-and-lint']
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       group: [1, 2, 3]
 
-    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
-    with:
-      skipForDocsOnly: 'yes'
-      afterBuild: NEXT_TEST_MODE=dev node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(development|e2e|unit)/.*\.test\.(js|jsx|ts|tsx)$'
-    secrets: inherit
+  #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+  #   with:
+  #     skipForDocsOnly: 'yes'
+  #     afterBuild: NEXT_TEST_MODE=dev node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(development|e2e|unit)/.*\.test\.(js|jsx|ts|tsx)$'
+  #   secrets: inherit
 
-  test-prod:
-    name: test prod
-    needs: ['build-and-lint']
-    strategy:
-      fail-fast: false
-      matrix:
-        group: [1, 2, 3]
+  # test-prod:
+  #   name: test prod
+  #   needs: ['build-and-lint']
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       group: [1, 2, 3]
 
-    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
-    with:
-      skipForDocsOnly: 'yes'
-      afterBuild: NEXT_TEST_MODE=start node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(production|e2e)/.*\.test\.(js|jsx|ts|tsx)$'
-    secrets: inherit
+  #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+  #   with:
+  #     skipForDocsOnly: 'yes'
+  #     afterBuild: NEXT_TEST_MODE=start node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(production|e2e)/.*\.test\.(js|jsx|ts|tsx)$'
+  #   secrets: inherit
 
-  test-integration:
-    name: test integration
-    needs: ['build-and-lint']
-    strategy:
-      fail-fast: false
-      matrix:
-        group: [1, 2, 3, 4, 5]
+  # test-integration:
+  #   name: test integration
+  #   needs: ['build-and-lint']
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       group: [1, 2, 3, 4, 5]
 
-    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
-    with:
-      skipForDocsOnly: 'yes'
-      afterBuild: node run-tests.js --timings -g ${{ matrix.group }}/5 -c ${TEST_CONCURRENCY} --test-pattern '^(integration)/.*\.test\.(js|jsx|ts|tsx)$'
-    secrets: inherit
+  #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+  #   with:
+  #     skipForDocsOnly: 'yes'
+  #     afterBuild: node run-tests.js --timings -g ${{ matrix.group }}/5 -c ${TEST_CONCURRENCY} --test-pattern '^(integration)/.*\.test\.(js|jsx|ts|tsx)$'
+  #   secrets: inherit
 
-  tests-pass:
-    needs:
-      [
-        'build-and-lint',
-        'test-dev',
-        'test-prod',
-        'test-integration',
-        'rust-check',
-        'test-cargo-unit',
-        'test-next-swc-integration',
-      ]
-    runs-on: [self-hosted, linux, x64]
-    name: thank you, next
-    steps:
-      - run: echo 'success'
+  # tests-pass:
+  #   needs:
+  #     [
+  #       'build-and-lint',
+  #       'test-dev',
+  #       'test-prod',
+  #       'test-integration',
+  #       'rust-check',
+  #       'test-cargo-unit',
+  #       'test-next-swc-integration',
+  #     ]
+  #   runs-on: [self-hosted, linux, x64]
+  #   name: thank you, next
+  #   steps:
+  #     - run: echo 'success'
