--- a/package.json
+++ b/package.json
@@ -27,15 +27,20 @@
     "git-reset": "git reset --hard HEAD",
     "git-clean": "git clean -d -x -e node_modules -e packages -f",
     "lint-typescript": "turbo run typescript",
-    "lint-eslint": "turbo run lint-eslint",
-    "lint-no-typescript": "run-p prettier-check lint-eslint lint-language",
-    "lint": "run-p test-types lint-typescript prettier-check lint-eslint lint-language",
+    "lint-eslint": "eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
+    "lint-eslint-turbo": "turbo run lint-eslint",
+    "lint-no-typescript": "run-p prettier-check lint-eslint lint-language-turbo",
+    "lint": "run-p test-types lint-typescript prettier-check-turbo lint-eslint-turbo lint-language",
     "lint-fix": "pnpm prettier-fix && eslint . --ext js,jsx,ts,tsx --fix --max-warnings=0 --config .eslintrc.json --no-eslintrc",
     "lint-language": "alex .",
-    "prettier-check": "turbo run prettier-check",
+    "lint-language-turbo": "turbo run lint-lange",
+    "prettier-check": "prettier --check .",
+    "prettier-check-turbo": "turbo run prettier-check",
+    "check-examples": "./scripts/check-examples.sh",
+    "get-test-timings": "node run-tests.js --timings --write-timings -g 1/1",
     "prettier-fix": "prettier --write .",
     "types": "lerna run types --stream",
-    "typescript": "turbo run typescript",
+    "check-precompiled": "./scripts/check-pre-compiled.sh",
     "prepublishOnly": "turbo run build",
     "release-canary": "git checkout canary && git pull && lerna version prerelease --preid canary --force-publish && release --pre --skip-questions --show-url",
     "release-stable": "lerna version --force-publish",
