--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,7 +15,7 @@ env:
   PNPM_VERSION: 7.24.3
   NODE_MAINTENANCE_VERSION: 16
   NODE_LTS_VERSION: 18
-  TEST_CONCURRENCY: 4
+  TEST_CONCURRENCY: 8
   # TODO: remove after testing
   # NEXT_TEST_CONTINUE_ON_ERROR: 'true'
 
@@ -30,16 +30,33 @@ env:
   NEXT_TEST_JOB: 1
 
 jobs:
-  build-and-lint:
-    name: build and lint
+  build:
+    name: build
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    secrets: inherit
+
+  lint:
+    name: lint
+    needs: ['build']
+
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
-      afterBuild: pnpm lint && turbo run check-examples && turbo run check-precompiled
+      afterBuild: pnpm lint-no-typescript && pnpm check-examples
+    secrets: inherit
+
+  check-types-precompiled:
+    name: types and precompiled
+    needs: ['build']
+
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      afterBuild: pnpm types-and-precompiled
+      skipForDocsOnly: 'yes'
     secrets: inherit
 
   rust-check:
     name: rust check
-    needs: ['build-and-lint']
+    needs: ['build']
 
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
@@ -50,7 +67,7 @@ jobs:
 
   test-cargo-unit:
     name: test cargo unit
-    needs: ['build-and-lint']
+    needs: ['build']
     uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
     with:
       skipForDocsOnly: 'yes'
@@ -58,69 +75,102 @@ jobs:
       afterBuild: turbo run test-cargo-unit
     secrets: inherit
 
-  # test-next-swc-integration:
-  #   name: test next-swc integration
-  #   needs: ['build-and-lint']
+  # test-cargo-integration:
+  #   name: test cargo integration
+  #   needs: ['build']
   #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
   #   with:
+  #     needsNextest: 'yes'
   #     skipForDocsOnly: 'yes'
-  #     afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/packages/next-swc/crates/next-dev-tests/tests-manifest.json" __INTERNAL_NEXT_DEV_TEST_TURBO_DEV=TRUE __INTERNAL_CUSTOM_TURBOPACK_BINDINGS="$(pwd)/packages/next-swc/native/next-swc.linux-x64-gnu.node" __INTERNAL_NEXT_DEV_TEST_TURBO_GLOB_MATCH="*" NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --type development --timings -c 1
+  #     afterBuild: CARGO_PROFILE_RELEASE_LTO=false turbo run test-cargo-integration
   #   secrets: inherit
 
-  # test-dev:
-  #   name: test dev
-  #   needs: ['build-and-lint']
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       group: [1, 2, 3]
+  test-turbopack-integration:
+    name: test turbopack integration
+    needs: ['build']
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      skipForDocsOnly: 'yes'
+      afterBuild: RUST_BACKTRACE=0 NEXT_EXTERNAL_TESTS_FILTERS="$(pwd)/packages/next-swc/crates/next-dev-tests/tests-manifest.js" __INTERNAL_NEXT_DEV_TEST_TURBO_DEV=TRUE __INTERNAL_CUSTOM_TURBOPACK_BINDINGS="$(pwd)/packages/next-swc/native/next-swc.linux-x64-gnu.node" __INTERNAL_NEXT_DEV_TEST_TURBO_GLOB_MATCH="*" NEXT_E2E_TEST_TIMEOUT=240000 NEXT_TEST_MODE=dev node run-tests.js --type development --timings -c 1
+    secrets: inherit
 
-  #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
-  #   with:
-  #     skipForDocsOnly: 'yes'
-  #     afterBuild: NEXT_TEST_MODE=dev node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(development|e2e|unit)/.*\.test\.(js|jsx|ts|tsx)$'
-  #   secrets: inherit
+  test-next-swc-wasm:
+    name: test next-swc wasm
+    needs: ['build']
 
-  # test-prod:
-  #   name: test prod
-  #   needs: ['build-and-lint']
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       group: [1, 2, 3]
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      skipForDocsOnly: 'yes'
+      afterBuild: rustup target add wasm32-unknown-unknown && curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh && turbo run build-wasm -- --target nodejs --features tracing/release_max_level_info && mv packages/next-swc/crates/wasm/pkg packages/next-swc/crates/wasm/pkg-nodejs && NEXT_TEST_MODE=start TEST_WASM=true node run-tests.js test/integration/production/test/index.test.js test/e2e/streaming-ssr/index.test.ts
+    secrets: inherit
 
-  #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
-  #   with:
-  #     skipForDocsOnly: 'yes'
-  #     afterBuild: NEXT_TEST_MODE=start node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(production|e2e)/.*\.test\.(js|jsx|ts|tsx)$'
-  #   secrets: inherit
+  test-dev:
+    name: test dev
+    needs: ['build']
+    strategy:
+      fail-fast: false
+      matrix:
+        group: [1, 2, 3]
 
-  # test-integration:
-  #   name: test integration
-  #   needs: ['build-and-lint']
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       group: [1, 2, 3, 4, 5]
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      skipForDocsOnly: 'yes'
+      afterBuild: NEXT_TEST_MODE=dev node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(development|e2e|unit)/.*\.test\.(js|jsx|ts|tsx)$'
+    secrets: inherit
 
-  #   uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
-  #   with:
-  #     skipForDocsOnly: 'yes'
-  #     afterBuild: node run-tests.js --timings -g ${{ matrix.group }}/5 -c ${TEST_CONCURRENCY} --test-pattern '^(integration)/.*\.test\.(js|jsx|ts|tsx)$'
-  #   secrets: inherit
+  test-prod:
+    name: test prod
+    needs: ['build']
+    strategy:
+      fail-fast: false
+      matrix:
+        group: [1, 2, 3]
 
-  # tests-pass:
-  #   needs:
-  #     [
-  #       'build-and-lint',
-  #       'test-dev',
-  #       'test-prod',
-  #       'test-integration',
-  #       'rust-check',
-  #       'test-cargo-unit',
-  #       'test-next-swc-integration',
-  #     ]
-  #   runs-on: [self-hosted, linux, x64]
-  #   name: thank you, next
-  #   steps:
-  #     - run: echo 'success'
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      skipForDocsOnly: 'yes'
+      afterBuild: NEXT_TEST_MODE=start node run-tests.js --timings -g ${{ matrix.group }}/3 -c ${TEST_CONCURRENCY} --test-pattern '^(production|e2e)/.*\.test\.(js|jsx|ts|tsx)$'
+    secrets: inherit
+
+  test-integration:
+    name: test integration
+    needs: ['build']
+    strategy:
+      fail-fast: false
+      matrix:
+        group: [1, 2, 3, 4, 5, 6]
+
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      skipForDocsOnly: 'yes'
+      afterBuild: node run-tests.js --timings -g ${{ matrix.group }}/6 -c ${TEST_CONCURRENCY} --test-pattern '^(integration)/.*\.test\.(js|jsx|ts|tsx)$'
+    secrets: inherit
+
+  test-firefox-safari:
+    name: test firefox and safari
+    needs: ['build']
+
+    uses: vercel/next.js/.github/workflows/build_reusable.yml@ijjk/update-ci-workflow
+    with:
+      skipForDocsOnly: 'yes'
+      afterBuild: pnpm playwright install && BROWSER_NAME=firefox node run-tests.js test/integration/production/test/index.test.js && BROWSER_NAME=safari NEXT_TEST_MODE=start node run-tests.js -c 1 test/integration/production/test/index.test.js test/e2e/basepath.test.ts && BROWSER_NAME=safari DEVICE_NAME='iPhone XR' node run-tests.js -c 1 test/production/prerender-prefetch/index.test.ts
+    secrets: inherit
+
+  tests-pass:
+    needs: [
+        'build',
+        'lint',
+        'check-types-precompiled',
+        'test-dev',
+        'test-prod',
+        'test-integration',
+        'rust-check',
+        'test-cargo-unit',
+        # 'test-cargo-integration',
+        'test-next-swc-wasm',
+        'test-turbopack-integration',
+      ]
+    runs-on: [self-hosted, linux, x64]
+    name: thank you, next
+    steps:
+      - run: echo 'success'
