--- a/.github/workflows/build_reusable.yml
+++ b/.github/workflows/build_reusable.yml
@@ -19,6 +19,10 @@ on:
         required: false
         description: 'version of Node.js to use'
         type: string
+      needsNextest:
+        required: false
+        description: 'if nextest rust dep is needed'
+        type: string
 
 env:
   NAPI_CLI_VERSION: 2.14.7
@@ -27,7 +31,7 @@ env:
   PNPM_VERSION: 7.24.3
   NODE_MAINTENANCE_VERSION: 16
   NODE_LTS_VERSION: 18
-  TEST_CONCURRENCY: 4
+  TEST_CONCURRENCY: 8
   # TODO: remove after testing
   # NEXT_TEST_CONTINUE_ON_ERROR: 'true'
 
@@ -58,6 +62,10 @@ jobs:
           toolchain: ${{ env.RUST_TOOLCHAIN }}
           components: rustfmt, clippy
 
+      - name: Install nextest
+        if: ${{ inputs.needsNextest == 'yes' }}
+        uses: taiki-e/install-action@nextest
+
       - run: rustc --version
 
       - run: npm i -g yarn "pnpm@${PNPM_VERSION}" "turbo@${TURBO_VERSION}" "@napi-rs/cli@${NAPI_CLI_VERSION}"
@@ -68,6 +76,20 @@ jobs:
 
       - run: git clean -xdf
 
+      - run: echo "DOCS_CHANGE<<EOF" >> $GITHUB_OUTPUT; echo "$(node scripts/run-for-change.js --not --type docs --exec echo 'nope')" >> $GITHUB_OUTPUT; echo 'EOF' >> $GITHUB_OUTPUT
+        name: check docs only change
+        id: docs-change
+
+      # normalize versions before build-native for better cache hits
+      - run: node scripts/normalize-version-bump.js
+        name: normalize versions
+
+      - run: turbo run build-native-release --summarize true -- --target x86_64-unknown-linux-gnu
+
+      # undo normalize version changes for install/build
+      - run: git checkout .
+        if: ${{ inputs.skipInstallBuild != 'yes' }}
+
       - run: pnpm store path
 
       - run: pnpm install
@@ -75,8 +97,6 @@ jobs:
 
       - run: pnpm build
         if: ${{ inputs.skipInstallBuild != 'yes' }}
-
-      - run: turbo run build-native-release --summarize true -- --target x86_64-unknown-linux-gnu
 
       - run: pnpm playwright install-deps
         if: ${{ inputs.skipInstallBuild != 'yes' }}
@@ -88,11 +108,8 @@ jobs:
 
       - run: rm -rf /tmp/next-repo-*; rm -rf /tmp/next-install-* /tmp/yarn-* /tmp/ncc-cache target
 
-      # - name: Check docs only change
-      #   run: echo "DOCS_CHANGE<<EOF" >> $GITHUB_OUTPUT; echo "$(node scripts/run-for-change.js --not --type docs --exec echo 'nope')" >> $GITHUB_OUTPUT; echo 'EOF' >> $GITHUB_OUTPUT
-      #   id: docs-change
       - run: /bin/bash -c "${{ inputs.afterBuild }}"
-        # if: ${{inputs.skipForDocsOnly != 'yes' || steps.docs-change.outputs.DOCS_CHANGE == 'nope'}}
+        if: ${{inputs.skipForDocsOnly != 'yes' || steps.docs-change.outputs.DOCS_CHANGE == 'nope'}}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
