--- a/package.json
+++ b/package.json
@@ -28,14 +28,12 @@
     "git-clean": "git clean -d -x -e node_modules -e packages -f",
     "lint-typescript": "turbo run typescript",
     "lint-eslint": "eslint . --ext js,jsx,ts,tsx --max-warnings=0 --config .eslintrc.json --no-eslintrc",
-    "lint-eslint-turbo": "turbo run lint-eslint",
-    "lint-no-typescript": "run-p prettier-check lint-eslint lint-language-turbo",
-    "lint": "run-p test-types lint-typescript prettier-check-turbo lint-eslint-turbo lint-language",
+    "lint-no-typescript": "run-p prettier-check lint-eslint lint-language",
+    "types-and-precompiled": "run-p lint-typescript check-precompiled",
+    "lint": "run-p test-types lint-typescript prettier-check lint-eslint lint-language",
     "lint-fix": "pnpm prettier-fix && eslint . --ext js,jsx,ts,tsx --fix --max-warnings=0 --config .eslintrc.json --no-eslintrc",
     "lint-language": "alex .",
-    "lint-language-turbo": "turbo run lint-lange",
     "prettier-check": "prettier --check .",
-    "prettier-check-turbo": "turbo run prettier-check",
     "check-examples": "./scripts/check-examples.sh",
     "get-test-timings": "node run-tests.js --timings --write-timings -g 1/1",
     "prettier-fix": "prettier --write .",
